# openvscode-farm

./: Cargo.toml
src/: env.rs  lib.rs  login.rs  main.rs  routes.rs
variants/: base.dockerfile
