[package]
name = "openvscode-farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-http = "3.9.0"
actix-rt = "2.10.0"
actix-service = "2.0.2"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-web = "4.9.0"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
failure = "0.1.8"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.21"
oauth2 = "4.4.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json"] }
ring = "0.17.8"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.6"
